--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@testing-library/react": "^13.0.0",
 		"@testing-library/user-event": "^13.2.1",
 		"react": "^18.2.0",
+		"react-beautiful-dnd": "^13.1.0",
 		"react-dom": "^18.2.0",
 		"react-scripts": "5.0.1",
 		"web-vitals": "^2.1.0"
@@ -19,20 +20,26 @@
 	},
 	"eslintConfig": {
 		"extends": [
-		"react-app",
-		"react-app/jest"
+			"react-app",
+			"react-app/jest"
 		]
 	},
 	"browserslist": {
-		"production": [
-		">0.2%",
-		"not dead",
-		"not op_mini all"
+		"productionyar": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
 		],
 		"development": [
-		"last 1 chrome version",
-		"last 1 firefox version",
-		"last 1 safari version"
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.8",
+		"eslint": "^8.21.0",
+		"postcss": "^8.4.16",
+		"tailwindcss": "^3.1.8"
 	}
 }
